css/style.css
:root{
	--footer-height: 6rem;
	--header-height: 6rem;
	--aside-width: 14rem;
}

/*************************
*********ROOT***********
*************************/

/* GENERAL */
body{
	height: 100vh;
	font-family: 'Montserrat', Arial;
	font-weight: 500;
	/* debug */
}


h2,h3,h5{
	color: white;
	font-weight: bold;
}
h4,h6{
	color: #a3a3a3;
}


aside{
	display: flex;
	flex-direction: column;
	gap: 1rem;
	color: #a3a3a3;
	min-width: var(--aside-width);
	background-color: #000000;
}

header{
	height: var(--header-height);
	background-color: rgba(0,0,0,0.5);
	position: fixed;
	width: calc(100% - var(--aside-width));
	text-align: end;
}
main{
	overflow: auto;
	height: 100%;
	width: calc(100% - var(--aside-width));
}

footer{
	height: var(--footer-height);
	background-color: #282828;
	z-index: 1;
	position: fixed;
	width: 100%;
	
	color: white;
}



/* TOP-CONTENT */
.top-content{
	height: calc(100% - var(--footer-height));
	background-color: #141922;
}

/* aside */

.logo > img{
	width: 10rem;
}


.home{
	border-left: 0.2rem solid #adff2f;
	padding-left: calc(1rem - 0.2rem);
}
.home > a,
.sidebar-explorer > div > a:hover,
.create-pl:hover,
.playlist > ul > li:hover,
.download-app  *:hover{
	filter: brightness(2);
}


.sidebar-explorer > div > a img{
	width: 2rem;
}

.playlist{
	min-height: 5rem;
	overflow: auto;
}

.playlist > .create-pl > div:first-of-type{
	font-size: 3rem;
}

.profile{
	margin-top: auto;
	font-size: 1rem;
}

.download-app  img{
	width: 1.5rem;
}

.download-app{
	border-bottom: 2px solid currentColor;
}

/* main */
.main-content{
	padding-top: 6rem;
	padding-left: 1rem;
	padding-right: 1rem;
	height: 100%;
}

.generic-titles{
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 1rem;
	color: #a3a3a3;
}



/* footer */
.footer-bar{
	display: flex;
	justify-content: space-between;
	align-items: center;
	height: 100%;
}

.details-bar{
	flex: 1;
	align-items: center;
}

.image-album{
	width: 4rem;
}


.play-bar{
	display: flex;
	flex-direction: column;
	align-items: center;
	flex: 2;
	height: 100%;
	justify-content: space-evenly;
	
}

.timeline{
	display: flex;
	width: 100%;
	justify-content: center;
}

.progress-bar{
	width: 60%;
	height: 0.2rem;
	background-color: #5a5a5a;
	align-self: center;
}

.audio-progress-bar{
	width: 5rem;
	height: 0.2rem;
	background-color: #5a5a5a;
	align-self: center;
	border-radius: 2px;
}

.progress{
	width: 25%;
	height: 100%;
	background-color: #cecece;
}

